# pyprojinit

./: README.md  build.sh  pyproject.toml
pyprojinit/: cli.py  defaults.py
